page overflow fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,8 @@
+html,body
+{
+    overflow-x: hidden; 
+}
+
 .App {
   text-align: center;
   background-color: #d009f8;
