--- a/frontend/src/HeaderBar.css
+++ b/frontend/src/HeaderBar.css
@@ -7,6 +7,7 @@
   position: sticky;
   top: 0;
   z-index: 10;
+  min-width: 100vw;
 }
 
 a.header-title {
