--- a/frontend/src/main/main.css
+++ b/frontend/src/main/main.css
@@ -1,5 +1,6 @@
 .Main {
   background-color: #faf0e5;
+  min-width: 100vw;
   min-height: 100vh;
 }
 
